k8s/ingress/ingress.yaml
# File: k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cfdi-ingress
  namespace: cfdi-staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: cfdi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cfdi-api
                port:
                  number: 80
